<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Planner</string>
    <string name="app_welcome">Welcome to Travel Planner!</string>
    <string name="title_section1">My trips</string>
    <string name="title_section2">Plan for month</string>
    <string name="title_section3">Synchronize</string>
    <string name="title_section4">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="login">Log In</string>
    <string name="register">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm password</string>
    <string name="login_fail">Failed to log in</string>
    <string name="register_fail">Failed to sign up</string>


    <string name="trips_filter_hint">Type destination, comment or date</string>
    <string name="trips_empty">You have no trips yet</string>
    <string name="trip_edit_title">Edit Trip</string>
    <string name="trip_edit_destination">Destination</string>
    <string name="trip_edit_start">Set start date</string>
    <string name="trip_edit_end">Set end date</string>
    <string name="trip_edit_comment">Comment</string>
    <string name="trip_save_fail">Trip was not saved</string>
    <string name="trip_deleted">Trip was deleted</string>

</resources>
