<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trip_edit_header"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_edit_destination"/>

    <Button
        android:id="@+id/trip_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/trip_edit_start"/>

    <Button
        android:id="@+id/trip_end_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/trip_edit_end"/>


    <EditText
        android:id="@+id/trip_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_edit_comment"/>

</LinearLayout>